samples/_failures_safe/1761172031_0628c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d4ce9cd.c: In function ‘main’:
./samples/SAFE/__tmp_1d4ce9cd.c:150:16: error: missing terminating " character
  150 |         printf("%.2f\n
      |                ^~~~~~~
./samples/SAFE/__tmp_1d4ce9cd.c:150:9: error: expected expression at end of input
  150 |         printf("%.2f\n
      |         ^~~~~~
./samples/SAFE/__tmp_1d4ce9cd.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d4ce9cd.c:150:9: error: expected declaration or statement at end of input
